src/test/ui/error-codes/E0308.stderr
error[E0308]: intrinsic has wrong type
  --> $DIR/E0308.rs:4:5
   |
LL |     fn size_of<T>();
   |     ^^^^^^^^^^^^^^^^ expected (), found usize
   |
   = note: expected type `extern "rust-intrinsic" fn()`
              found type `extern "rust-intrinsic" fn() -> usize`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
